# Mint_IDE_Student

./: .gitignore  README.md  index.html  install-linux.sh  install-mac.sh  install-windows.ps1  package-lock.json  package.json  tsconfig.json
.github/workflows/: build.yml
src/: main.ts  setup_wizard.ts
src-tauri/: Cargo.toml  app.manifest  build.rs  installer-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  recorder.rs  runner.rs  setup.rs  workspace.rs
src-tauri/src/monitor/: clipboard.rs  focus.rs  integrity.rs  log.rs  mod.rs
src/editor/: notebook.ts  setup.ts
src/monitor/: edithistory.ts  keystroke.ts
src/styles/: main.css
