[package]
name = "mint-exam-ide"
version = "0.1.0"
edition = "2021"

[lib]
name = "mint_exam_ide_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
chrono = { version = "0.4" }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
arboard = "3"
dirs = "6"
zip = { version = "2", features = ["aes-crypto"] }
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"



